@@ -3,6 +3,7 @@ Revision history for Git-Background
 {{$NEXT}}
 
   - Switch license to the ISC license
+  - Bumped dependency to Future 0.49 and use the new set_udata/udata methods
   - Remove test dependency on Test::Fatal
 
 0.005  2022-04-03 16:05:30 UTC
